--- a/index.scss
+++ b/index.scss
@@ -1,11 +1,15 @@
 .feature-block {
   @extend .block-2;
-  padding: spacing(4) 0 spacing(6);
+  padding: spacing(4) spacing(4) spacing(6);
   color: #fff;
+
+  .breakpoint-320 & {
+    padding-bottom: spacing(2);
+  }
 
   .feature-block__body {
     @include clear-floats;
-    width: 940px;
+    max-width: 940px;
     margin: 0 auto;
   }
 
@@ -21,6 +25,19 @@
     padding: 0 spacing(1);
     width: 25%;
     float: left;
+    .breakpoint-640 & {
+      width: 50%;
+      margin-bottom: spacing(4);
+    }
+    .breakpoint-320 & {
+      width: 100%;
+      text-align: center;
+      margin-bottom: spacing(4);
+      i {
+        background-size: contain;
+        height: 90px;
+      }
+    }
   }
 
   .feature-block__sub-title {
@@ -29,6 +46,9 @@
     margin-bottom: spacing(2);
     color: #fff;
     text-align: center;
+    .breakpoint-320 & {
+      margin-top: spacing(2);
+    }
   }
 
   .feature-block__content {
